3_design-pattern/TPs/Istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: store-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store
spec:
  hosts:
  - "*"
  gateways:
  - store-gateway
  http:
  - match:
    - uri:
        prefix: /order/
    rewrite:
      uri: /
    route:
    - destination:
        host: order-service

  - match:
    - uri:
        prefix: /product/
    rewrite:
      uri: /
    route:
    - destination:
        host: product-service

  - match:
    - uri:
        prefix: /delivery/
    rewrite:
      uri: /
    route:
    - destination:
        host: livraison-service        

  - match:
    - uri:
        prefix: /query/
    rewrite:
      uri: /
    route:
    - destination:
        host: order-query-service
